--- a/VRChat/66/1234566.html
+++ b/VRChat/66/1234566.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "KFlKfRnR8r7h0JLWoi0HUxcQWKp4Cqbg/kSFS87RsJg="></script>
+    "X5wV4U6E7M712aJslNQsdvBdCBkat5LgQ6e+WfbJrCs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"卵","description":"【卵】\n\nVRChat向け小物\n\nポリゴン数 1,卵割れ有り：1,080ポリゴン\n           2,卵半分ずつ：540ポリゴン\n\n何かの卵です。\n通常版と半分に割れた状態の物２つを入っています。\n通常版はシェイプーキーで割れた卵にする事が可能です。\n\n【内容】\n\n1.卵割れ有り.UnityPackage\n\n2.卵半分ずつ.UnityPackage\n\n3.卵各種使用の利用規約 readme.txt\n\n\n\n【注意事項】\n\n1.このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n2.過度なアダルト表現、グロテスクな表現等での使用は禁止致します。\n3.政治的利用、宗教的利用、誹謗中傷目的の作品への使用は禁止します。\n4.本モデル、改造モデルをゲーム、アニメーション、アプリに使用すること、またそれを用いた収益化活動での使用を許可致します。\n5.ただし、本製品の作者を偽ること、本製品の改造の有無に関わらず再配布および販売は禁止致します。\n6.良識の範囲でのご使用をお願い致します。\n7.予告なく規約変更、配布停止、使用禁止にする事があります。","url":"https://booth.pm/ja/items/1234566","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1ed4c1db-b9a3-45a8-9a20-fc0109c447fe/i/1234566/cf1eafa0-5163-4825-8ee8-c5d9ac38e26b_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KFlKfRnR8r7h0JLWoi0HUxcQWKp4Cqbg/kSFS87RsJg="></script>
+    nonce="X5wV4U6E7M712aJslNQsdvBdCBkat5LgQ6e+WfbJrCs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -162,7 +162,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              82
+                              83
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,7 +177,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              82
+                              83
                             </div>
                           </div></a>
                         </div>
@@ -523,7 +523,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
